--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
             </div>
           </div>
 
-          <div class="col-12  col-xl-5 comments bg-danger">
+          <div class="col-12  col-xl-5 comments ">
             <div>
               <span class="d-inline-block" style="max-width: 50%;"><img
                   class="img-fluid lazyautosizes ls-is-cached lazyloaded" data-sizes="auto" data-aspectratio=""
