--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     </section>
 
 
-    <section class="section-2 container-fluid">
-      <nav class="navbar  navbar-expand-lg">
+    <section class="section-2 ">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="./assets/images/petopet-logo_250x (1).png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -223,8 +223,8 @@
             <div class="carousel-panel">
               <div class="carousel-text">
                 <h2 class="h22">Looking for Ornamental Fish, Plants or products</h2>
-                <h3>We have a stunning Livestock and Product range at our stores.</h3>
-                <p>We’ve got some awesome deals going on for Aquariums, Accessories and Supplies, which we know you will
+                <h3 class="h33">We have a stunning Livestock and Product range at our stores.</h3>
+                <p class="p33">We’ve got some awesome deals going on for Aquariums, Accessories and Supplies, which we know you will
                   love.</p>
                 <div class="button-text">
                   <a href="" class=" btn-items-1">Fish</a>
@@ -239,8 +239,8 @@
             <div class="carousel-panel">
               <div class="carousel-text">
                 <h2 class="h22">Looking for PET birdS, ACCESSORIES AND SUPPLIES?</h2>
-                <h3>Singing, Talking Interactive Small Dinosaurs</h3>
-                <p>A great collection of birds from small Finches to Hand Tamed Talking Parrots. VIsit us at any of the locations or order online to be shipped to your doorstep.</p>
+                <h3 class="h33">Singing, Talking Interactive Small Dinosaurs</h3>
+                <p class="p33">A great collection of birds from small Finches to Hand Tamed Talking Parrots. VIsit us at any of the locations or order online to be shipped to your doorstep.</p>
                 <div class="button-text">
                   <a href="" class=" btn-items-1">Birds</a>
                   <a href="" class=" btn-items-1" style="background-color: white; color: #000000;">Birds Products</a>
@@ -253,7 +253,7 @@
             <div class="carousel-panel">
               <div class="carousel-text">
                 <h2 class="h22">We have exotic cats</h2>
-                <p>A wide range of Nutrition, Accessories and Supplies. VIsit us at any of the locations or order online to be shipped to your doorstep.</p>
+                <p class="p33">A wide range of Nutrition, Accessories and Supplies. VIsit us at any of the locations or order online to be shipped to your doorstep.</p>
                 <div class="button-text">
                   <a href="" class=" btn-items-1">Cats</a>
                   <a href="" class=" btn-items-1" style="background-color: white; color: #000000;">
@@ -267,7 +267,7 @@
             <div class="carousel-panel">
               <div class="carousel-text">
                 <h2 class="h22">Feeders</h2>
-                <p>You can also find extraordinary feeders at our stores ranging from tiny bugs to large rodents, live and frozen. Check the competitive quality and and price. Your exotic pets deserve the best, which you can also find at our stores.</p>
+                <p class="p33">You can also find extraordinary feeders at our stores ranging from tiny bugs to large rodents, live and frozen. Check the competitive quality and and price. Your exotic pets deserve the best, which you can also find at our stores.</p>
                 <div class="button-text">
                   <a href="" class=" btn-items-1">Live Stock</a>
                   <a href="" class=" btn-items-1" style="background-color: white; color: #000000;">
@@ -283,7 +283,7 @@
             <div class="carousel-panel">
               <div class="carousel-text">
                 <h2 class="h22">Checkout Our Dog Section</h2>
-                <p>For a wide range of Nutrition, Accessories and supplies. VIsit us at any of the locations or order online to be shipped to your doorstep.
+                <p class="p33">For a wide range of Nutrition, Accessories and supplies. VIsit us at any of the locations or order online to be shipped to your doorstep.
                 </p>
                 <div class="button-text">
                   <a href="" class=" btn-items-1">Dogs</a>
@@ -298,7 +298,7 @@
             <div class="carousel-panel">
               <div class="carousel-text">
                 <h2 class="h22">Ponds</h2>
-                <p>
+                <p class="p33">
                   Get advantage of our proficiency and knowledge, when it comes to giving life to your backyard. From designing to building and maintenance. We have an awesome selection of pond equipments, accessories and supplies.</p>
                 <div class="button-text">
                   <a href="" class=" btn-items-1">Live Stock</a>
@@ -313,9 +313,8 @@
             <div class="carousel-panel">
               <div class="carousel-text">
                 <h2 class="h22">GREAT SELECTION OF exotic reptiles, ACCESSORIES AND SUPPLIES</h2>
-                <p>
-                  Visit Pet Village inside Pet O Pets to check a great reptile selection or order online to be shipped to your doorstep.
-              </p>
+                <p class="p33">
+                  Visit Pet Village inside Pet O Pets to check a great reptile selection or order online to be shipped to your doorstep.</p>
                 <div class="button-text">
                   <a href="" class=" btn-items-1">Reptiles</a>
                   <a href="" class=" btn-items-1" style="background-color: white; color: #000000;">
